--- a/css/main.css
+++ b/css/main.css
@@ -17,10 +17,11 @@ a {
     color: #999;
 }
 a:hover {
-    text-decoration: bold underline;
+    text-decoration: underline;
+    font-weight: bold;
 }
 h1 {
-    font-size: 3em;
+    font-size: 2.5em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 p {
