--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
 	    		<ul>
 	        		<li><a href="mailto:isaac@isaac-friedman.com">email</a></li>
 	        		<li><a href="https://github.com/isaac-friedman">github.com/isaac-friedman</a></li>
+				<li><a href="https://isaac-friedman.github.io/blog/atom.xml">My Blog</a></li>
 				</ul>
 			</footer>
 		</body>
