--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,9 @@
 			<footer>
 	    		<ul>
 	        		<li><a href="mailto:isaac@isaac-friedman.com">email</a></li>
-	        		<li><a href="https://github.com/isaac-friedman">github.com/isaac-friedman</a></li>
+	        		<li><a href="https://github.com/isaac-friedman">Github</a></li>
 				<li><a href="https://isaac-friedman.github.io/blog/atom.xml">My Blog</a></li>
+				<li><a href="cv/Isaac_Friedman_CV.pdf">Download My CV</a></li>
 				</ul>
 			</footer>
 		</body>
