--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:isaac@isaac-friedman.com">email</a></li>
+	        		<li><a href="mailto:isaac@isaac-friedman.com">Email</a></li>
 	        		<li><a href="https://github.com/isaac-friedman">Github</a></li>
 				<li><a href="https://isaac-friedman.github.io/blog/index.html">My Blog</a></li>
 				<li><a href="cv/Isaac_Friedman_CV.pdf">Download My CV</a></li>
