--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,11 +15,11 @@
 		</head>
 		<body>
 			<nav>
-	    		<ul>
-	        		<li><a href="/">Home</a></li>
-	        		<li><a href="/cv">CV</a></li>
-	        		<li><a href="/blog">Blog</a></li>
-	    		</ul>
+    		<ul>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+				<h1><a href="/">Isaac Friedman</a><h1>
 			</nav>
 			<div class="container">
 
