--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,11 @@
 body {
     margin: 50px auto;
-    width: 80%;
+    width: 70%;
+    max-width: 900px;
+}
+
+nav, footer {
+  font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 
 nav {
@@ -12,11 +17,14 @@ nav ul {
   float: right;
 }
 
+nav h1 a {
+  color: #428bca;
+}
+
 nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    padding: 0px;
-    list-style: none;
-    font-weight: bold;
+  padding: 0px;
+  list-style: none;
+  font-weight: bold;
 }
 
 nav ul li, footer ul li {
@@ -32,6 +40,7 @@ a {
 a:hover {
     text-decoration: underline;
     font-weight: bold;
+    color: #428bca;
 }
 
 h1 {
