added round headshot to homepage

--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,14 @@ h1 {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 
+.image-cropper {
+  float: left;
+  margin-right: 10px;
+	height: 200px;
+	width: 200px;
+	border-radius: 50%;
+}
+
 p {
     font-size: 1.5em;
     line-height: 1.4em;
