feat: Added Download button to CV page

--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,11 @@ h1 {
 	border-radius: 50%;
 }
 
+iframe {
+    overflow: none;
+    margin-top: 15px;
+}
+
 p {
     font-size: 1.5em;
     line-height: 1.4em;
