--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
         		<ul>
           		<li><a href="/cv">CV</a></li>
           		<li><a href="/blog">Blog</a></li>
+                <li><a href="https://github.com/isaac-friedman"><img src="/img/GitHub-Mark-32px.png" height=16px width=16px /> Github</a></li>
         		</ul>
 				<h1><a href="/">Isaac Friedman</a><h1>
 			</nav>
@@ -28,7 +29,6 @@
 			</div><!-- /.container -->
 			<footer>
         		<ul>
-        			<li><a href="https://github.com/isaac-friedman"><img src="/img/GitHub-Mark-32px.png" height=16px width=16px /> My Github</a></li>
               		<li><a href="mailto:isaac@isaac-friedman.com">Email</a></li>
                     <li><a href="cv/Isaac_Friedman_CV.pdf">Download My CV</a></li>
     			</ul>
