--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-    margin: 50px auto;
+    margin: 5% auto;
     width: 70%;
     max-width: 800px;
 }
@@ -57,7 +57,7 @@ h1 {
 }
 
 iframe {
-    overflow: none;
+    /* overflow: none; */
     margin-top: 15px;
 }
 
